--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <title>portfolio</title>
 </head>
 <body>
+    <header>
+        <div id="logo">
+            
+        </div>
+        <div>
+            
+        </div>
+    </header>
     <h1></h1>
 </body>
 </html>
