--- a/rivo/html/index.html
+++ b/rivo/html/index.html
@@ -10,25 +10,32 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@2.2.0/fonts/remixicon.css" rel="stylesheet">
 </head>
 <body>
+
     <header id="nav">
-        <div id="nombre">
-            <div id="logo">
-                <img src="#" alt="">
-            </div>
-            <div class="hex">
-                
-            </div>
-            Rivo José Molina Uriarte
-        </div>
-        <div id="menu">
-            <a href="./sobre_mi.html">
-                Sobre mi
+        <aside>
+            <a href="" id="nombre">
+                <div id="logo">
+                    <svg fill="#000000" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="800px" height="800px" viewBox="0 0 485.688 485.688" xml:space="preserve">
+                        <g>
+                            <g>
+                                <path d="M364.269,453.155H121.416L0,242.844L121.416,32.533h242.853l121.419,210.312L364.269,453.155z M131.905,434.997h221.878
+                                    l110.939-192.152L353.783,50.691H131.905L20.966,242.844L131.905,434.997z"/>
+                            </g>
+                        </g>
+                    </svg>
+                    <div class="image_container"></div>
+                </div>
+            
+                Rivo José Molina Uriarte
             </a>
+        </aside>
+        <div id="menu">
             <div class="desplegable">
-                <div class="deplegable_titulo">Mis cursos
-                     <i class="ri-arrow-down-s-line"></i>
+                <div class="deplegable_titulo icon_title">Mis estudios
+                     <i data_icon_name="arrow_up"></i>
                 </div>
                 <div class="desplegable_options">
                     <a class="desplegable_option" href=""> DAW 1</a>
@@ -41,6 +48,7 @@
         </div>
     </header>
 </body>
+<script src="../js/Icons.js"></script>
 <script>
     initPortfolio()
 </script>
