--- a/rivo/html/index.html
+++ b/rivo/html/index.html
@@ -7,18 +7,18 @@
     <link rel="stylesheet" href="../css/normalize.css">
     <link rel="stylesheet" href="../css/styles.css">
     <script src="../js/script.js"></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+
     <link href="https://cdn.jsdelivr.net/npm/remixicon@2.2.0/fonts/remixicon.css" rel="stylesheet">
+
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@100;200;300;400;500;600;700;800;900&family=Montserrat:wght@300&family=Outfit&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,800;0,900;1,500;1,600;1,700&family=Roboto&family=Varela+Round&display=swap" rel="stylesheet">
 </head>
 <body>
-
     <header id="nav">
-        <aside>
-            <a href="" id="nombre">
-                <div id="logo">
-                    <svg fill="#000000" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="800px" height="800px" viewBox="0 0 485.688 485.688" xml:space="preserve">
+        <aside id="personal">
+            <a href="" id="nombre" class="app_hover">
+                <div id="logo" class="halo">
+                    <svg class="app_svg app_hover" fill="#000000" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="800px" height="800px" viewBox="0 0 485.688 485.688" xml:space="preserve">
                         <g>
                             <g>
                                 <path d="M364.269,453.155H121.416L0,242.844L121.416,32.533h242.853l121.419,210.312L364.269,453.155z M131.905,434.997h221.878
@@ -28,25 +28,65 @@
                     </svg>
                     <div class="image_container"></div>
                 </div>
-            
-                Rivo José Molina Uriarte
+                Rivo José Molina Uriarte · Portfolio
             </a>
         </aside>
         <div id="menu">
             <div class="desplegable">
-                <div class="deplegable_titulo icon_title">Mis estudios
-                     <i data_icon_name="arrow_up"></i>
-                </div>
+                <a href="#" class="deplegable_titulo icon_title app_hover">Mis estudios
+                    <i data_icon_name="arrow_up"></i>
+                </a>
                 <div class="desplegable_options">
-                    <a class="desplegable_option" href=""> DAW 1</a>
-                    <a class="desplegable_option" href=""> DAW 2</a>
+                    <a class="desplegable_option app_hover siglas" href=""> DAW 1</a>
+                    <a class="desplegable_option app_hover siglas" href=""> DAW 2</a>
+                    <a class="desplegable_option app_hover" href=""> Otros estudios</a>
                 </div>
             </div>
             <a href="./sobre_mi.html" class="desplegable">
-                <div class="deplegable_titulo">Mis trabajos</div>
+                <div class="deplegable_titulo app_hover">Mis trabajos</div>
             </a>
         </div>
     </header>
+    <main>
+        <section id="introduce_myself" class="full_section gradient_background">
+            <article>
+                <h3>
+                    Rivo José Molina Uriarte
+                </h3>
+                <h4>
+                    Desarrollo de aplicaciones web
+                </h4>
+                <div id="competencias">
+                    <div class="competencia icon_title">
+                        <i data_icon_name="html5"></i>HTML5
+                    </div>
+                    <div class="competencia icon_title">
+                        <i data_icon_name="css3"></i>CSS3
+                    </div>
+                    <div class="competencia icon_title">
+                        <i data_icon_name="java"></i>Java
+                    </div>
+                    <div class="competencia icon_title">
+                        <i data_icon_name="javascript"></i>JavaScript
+                    </div>
+                </div>
+            </article>
+            <article class="image_container">
+                <svg class="app_svg app_hover" fill="#000000" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="800px" height="800px" viewBox="0 0 485.688 485.688" xml:space="preserve">
+                    <g>
+                        <g>
+                            <path d="M364.269,453.155H121.416L0,242.844L121.416,32.533h242.853l121.419,210.312L364.269,453.155z M131.905,434.997h221.878
+                                l110.939-192.152L353.783,50.691H131.905L20.966,242.844L131.905,434.997z"/>
+                        </g>
+                    </g>
+                </svg>
+            </article>
+        </section>
+        <section id="introduce_myself" class="full_section"></section>
+    </main>
+    <footer>
+
+    </footer>
 </body>
 <script src="../js/Icons.js"></script>
 <script>
