--- a/rivo/html/index.html
+++ b/rivo/html/index.html
@@ -6,7 +6,7 @@
     <title>Rivo | Portfolio</title>
     <link rel="stylesheet" href="../css/normalize.css">
     <link rel="stylesheet" href="../css/styles.css">
-    <script src="../js/script.js"></script>
+    <script src="../js/portfolio.js"></script>
 
     <link rel="stylesheet" href="../font-awesome-4.7.0/css/font-awesome.min.css">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@2.2.0/fonts/remixicon.css" rel="stylesheet">
@@ -43,8 +43,13 @@
                     <a class="desplegable_option app_hover" href=""> Otros estudios</a>
                 </div>
             </div>
-            <a href="./sobre_mi.html" class="desplegable">
+            <a href="./sobre_mi.html">
                 <div class="deplegable_titulo app_hover">Mis trabajos</div>
+            </a>
+            <a href="./sobre_mi.html" id="responsive_menu_button">
+                <div class="deplegable_titulo app_hover">
+                    <i data_icon_name="burger_menu"></i>
+                </div>
             </a>
         </div>
     </header>
@@ -64,7 +69,7 @@
                         <i class="fa fa-camera-retro fa-lg"></i>Java
                     </div>
                     <div class="competencia icon_title">
-                        <i data_icon_name="js"></i>JavaScript
+                        <i class="fa fa-camera-retro fa-lg"></i>JavaScript
                     </div>
                 </div>
             </article>
