--- a/rivo/html/index.html
+++ b/rivo/html/index.html
@@ -29,10 +29,10 @@
                     </svg>
                     <div class="image_container"></div>
                 </div>
-                Rivo José Molina Uriarte · Portfolio
+                Rivo José · Portfolio
             </a>
         </aside>
-        <div id="menu">
+        <div id="desktop_menu">
             <button class="desplegable">
                 <a href="#" class="deplegable_titulo icon_title app_hover">Mis estudios
                     <i data_icon_name="arrow_up"></i>
@@ -45,17 +45,19 @@
             </button>
             <a class="" href="./sobre_mi.html">
                 <div class="deplegable_titulo app_hover">Mis proyectos</div>
+                <polygon fill="#213C45" points="180.745,294.673 189.226,299.762 216.677,299.762 216.677,103.068 180.745,124.628   " />
             </a>
-            <button id="responsive_menu_button" class="app_hover">
-                <i data_icon_name="burger_menu"></i>
-            </button>
         </div>
+        <button id="responsive_menu_button" class="centered_elements app_hover">
+            <i data_icon_name="burger_menu"></i>
+        </button>
     </header>
     <main>
         <section id="introduce_myself" class="full_section gradient_background">
-            <article>
-                <h3>Rivo José Molina Uriarte</h3>
-                <h4>Desarrollo de aplicaciones web</h4>
+            <article class="text_container">
+                <div class="profile_window"> </div>
+                <h3 class="code_reveal_effect">Rivo José Molina Uriarte</h3>
+                <h4 class="code_reveal_effect">Desarrollo de aplicaciones web</h4>
                 <div id="competencias">
                     <div class="competencia icon_title">
                         <i data_icon_name="html5"></i>HTML5
@@ -73,8 +75,18 @@
                     </div>
                 </div>
             </article>
-            <article class="image_container">
-                <svg class="app_svg app_hover" fill="#000000" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="800px" height="800px" viewBox="0 0 485.688 485.688" xml:space="preserve">
+            <article class="text_container">
+                <div class="hex_text_container text_content_box">
+                    <h4 class="code_reveal_effect text_content_header"> Mi portafolio</h4>
+                    <p class="code_reveal_effect">Hola, en este portafolio puedes encontrar un repositorio de mis proyectos, reflexiones y trabajos luego de cursar DAW en el Centro San Luis. Así como algo de información personal y algunas pequeñas demos.</p>
+                    <button class="hex_app_button" link_scroll_to="section_2">
+                        <i data_icon_name="arrow_down"></i>
+                    </button>
+                    <button class="app_color_button" link_scroll_to="section_2">
+                        <i data_icon_name="arrow_down"></i> THIS IS A TEST BUTTON
+                    </button>
+                </div>
+                <svg id="hexagon_image" class="app_svg app_hover" fill="#000000" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="800px" height="800px" viewBox="0 0 485.688 485.688" xml:space="preserve">
                     <g>
                         <g>
                             <path d="M364.269,453.155H121.416L0,242.844L121.416,32.533h242.853l121.419,210.312L364.269,453.155z M131.905,434.997h221.878
