Falta sobre mí y las estrellitas en el habilidades

--- a/habilidades.html
+++ b/habilidades.html
@@ -34,7 +34,7 @@
 <body>
     <header class="fixed-top">
         <div id="responsive_header" class="d-flex flex-row justify-content-between px-3 py-2">
-            <aside>
+            <aside class="row">
                 <a href="index.html" id="nombre" class="d-flex flex-row align-items-center justify-content-start app_hover">
                     <div id="logo" class="halo d-flex align-items-center justify-content-center">
                         <svg class="app_svg app_hover" viewBox="0 0 485.688 485.688">
@@ -53,11 +53,17 @@
             <button id="responsive_menu_button" class="flex_center app_hover">
                 <i data_icon_name="burger_menu"></i>
             </button>
+
+            <nav id="desktop_nav" class="flex-row">
+                <a href="estudios.html"><h3 class="app_hover text-center regular px-4 py-2">Estudios</h3></a>
+                <a href="habilidades.html"><h3 class="section_selected app_hover text-center regular px-4 py-2">Habilidades</h3></a>
+                <a href="#"><h3 class="app_hover text-center regular px-4 py-2">Sobre mí</h3></a>
+            </nav>
         </div>
 
         <nav id="responsive_nav" class="d-flex flex-column">
             <a href="estudios.html"><h3 class="text-left regular px-4 py-2">Estudios</h3></a>
-            <a href="habilidades.html"><h3 class="text-left regular px-4 py-2">Habilidades</h3></a>
+            <a href="habilidades.html"><h3 class="section_selected text-left regular px-4 py-2">Habilidades</h3></a>
             <a href="#"><h3 class="text-left regular px-4 py-2">Sobre mí</h3></a>
         </nav>
     </header>
@@ -72,7 +78,7 @@
             <p class="col-10 my-4 text-center">
                 Selecciona una habilidad
             </p>
-            <div class="col-11 col-md-8 row mb-5">
+            <div class="col-11 col-md-8 col-lg-6 row mb-5">
                 <article class="light_border">
                     <button class="accordion medium">
                         Lenguaje de Marca<i data_icon_name="arrow_up"></i>
@@ -87,7 +93,7 @@
                         <p class="col-11 py-3">
                             Maquetación de los estilos de la web en entornos como Figma y Canva. Preparar y presentar las propuestas de los proyectos.
                         </p>
-                        <svg style="scale: 0.85; width: 45%;" class="py-3 col-8 col-md-6"
+                        <svg style="scale: 0.85; width: 45%;" class="py-3 col-8 col-md-6 col-lg-3"
                         viewBox="0 0 512 512">
                             <path d="M 11,475.5 V 448 H 38.5 66 V 475.5 503 H 38.5 11 Z m 435,0 V 448 H 473.5 501 V 475.5 503 H 473.5 446 Z m -352.545455,5.04545 c -2.999691,-2.99969 -3.131334,-6.41533 -0.381965,-9.91059 L 95.14516,468 h 160.75311 160.7531 l 2.17432,2.31445 c 2.88427,3.07017 2.77173,7.17904 -0.28024,10.231 L 416.09091,483 H 256 95.909091 Z M 118.5,427.12116 c -8.51906,-3.90794 -13.5,-11.65015 -13.5,-20.98397 0,-5.63673 3.29882,-13.65245 64.1144,-155.78984 35.26292,-82.41604 65.17243,-151.939319 66.46557,-154.496169 8.62469,-17.053022 32.23286,-17.053022 40.8335,0 1.28954,2.55685 31.04848,71.698819 66.13098,153.648819 69.30751,161.89697 66.75005,155.20341 63.02566,164.95559 -2.06795,5.41486 -9.05199,12.02919 -14.21541,13.46292 -8.85204,2.45795 -17.75703,0.11713 -23.75323,-6.24391 -2.22713,-2.36265 -8.85804,-16.7351 -23.52134,-50.98239 L 323.66027,323 H 256 188.33973 l -20.41986,47.69221 c -14.6633,34.24729 -21.29421,48.61974 -23.52134,50.98239 -6.48568,6.88031 -17.65328,9.2289 -25.89853,5.44656 z M 303.71799,276.25 c -0.22002,-0.4125 -10.93119,-25.3875 -23.8026,-55.5 C 267.04398,190.6375 256.28206,166 256,166 c -0.28206,0 -11.04398,24.6375 -23.91539,54.75 -12.87141,30.1125 -23.58258,55.0875 -23.8026,55.5 -0.22002,0.4125 21.25307,0.75 47.71799,0.75 26.46492,0 47.93801,-0.3375 47.71799,-0.75 z M 33.454545,418.54545 31,416.09091 V 256 95.909091 l 2.454545,-2.454546 c 3.128274,-3.128273 6.962636,-3.128273 10.09091,0 L 46,95.909091 V 256 416.09091 l -2.454545,2.45454 C 42.195455,419.89545 39.925,421 38.5,421 c -1.425,0 -3.695455,-1.10455 -5.045455,-2.45455 z m 435.000005,0 L 466,416.09091 V 256 95.909091 l 2.45455,-2.454546 c 2.99969,-2.999691 6.41533,-3.131334 9.91059,-0.381965 L 481,95.14516 V 256 416.85484 l -2.63486,2.07258 c -3.49526,2.74937 -6.9109,2.61773 -9.91059,-0.38197 z M 11,36.5 V 9 H 38.5 66 V 36.5 64 H 38.5 11 Z m 435,0 V 9 H 473.5 501 V 36.5 64 H 473.5 446 Z M 93.07258,41.365141 c -2.749369,-3.495256 -2.617726,-6.910904 0.381965,-9.910596 L 95.909091,29 H 256 416.09091 l 2.45454,2.454545 c 2.9997,2.999692 3.13134,6.41534 0.38197,9.910596 L 416.85484,44 H 256 95.14516 Z"/>
                         </svg>
@@ -109,7 +115,7 @@
                         <p class="col-11 py-3">
                             Algunos de los entornos que he utilizado son Eclipse(Java Web) y VS Code(PHP).
                         </p>
-                        <svg style="scale: 1.2; width:45%;" class="py-5 col-8 col-md-6" viewBox="0 0 512 293.45">
+                        <svg style="scale: 1.2; width:45%;" class="py-5 col-8 col-md-6 col-lg-3" viewBox="0 0 512 293.45">
                             <path d="M12.93 267.59h47.76c-1.56-1.62-2.53-3.81-2.53-6.22V8.97C58.16 4.04 62.2 0 67.13 0h375.38c4.93 0 8.97 4.04 8.97 8.97v252.4c0 2.41-.97 4.6-2.53 6.22h50.12c3.56 0 6.8 1.45 9.14 3.79a12.903 12.903 0 0 1 0 18.27c-2.34 2.34-5.58 3.8-9.14 3.8H12.93c-3.56 0-6.8-1.46-9.14-3.8a12.903 12.903 0 0 1 0-18.27c2.34-2.34 5.58-3.79 9.14-3.79zM339 181.33c.67-2.91 3.59-4.72 6.5-4.05 2.91.68 4.72 3.59 4.05 6.51l-10.59 45.34a5.412 5.412 0 0 1-6.5 4.04 5.406 5.406 0 0 1-4.05-6.5L339 181.33zM97.79 82.82c-3.52 0-6.37-2.85-6.37-6.37 0-3.51 2.85-6.37 6.37-6.37h160.46c3.51 0 6.36 2.86 6.36 6.37 0 3.52-2.85 6.37-6.36 6.37H97.79zm0 40.57c-3.52 0-6.37-2.86-6.37-6.37 0-3.52 2.85-6.37 6.37-6.37h148.57c3.51 0 6.36 2.85 6.36 6.37 0 3.51-2.85 6.37-6.36 6.37H97.79zm0 81.13c-3.52 0-6.37-2.85-6.37-6.37s2.85-6.37 6.37-6.37h104.63c3.51 0 6.37 2.85 6.37 6.37s-2.86 6.37-6.37 6.37H97.79zm0-40.57a6.365 6.365 0 1 1 0-12.73h114.97a6.365 6.365 0 1 1 0 12.73H97.79zm227.12-84.76c0-4.31 1.24-8.3 3.36-11.71h37.7c2.12 3.38 3.35 7.4 3.35 11.71 0 12.26-9.94 22.21-22.2 22.21s-22.21-9.95-22.21-22.21zm86.29.84v4.65c0 4.35-3.55 7.91-7.9 7.91h-8.1a49.25 49.25 0 0 1-4.88 12.88l5.4 5.4c3.07 3.08 3.07 8.11 0 11.18l-6.58 6.59c-3.07 3.07-8.1 3.07-11.18 0l-4.92-4.93c-4.1 2.55-8.59 4.51-13.36 5.78v6.72c0 4.35-3.57 7.91-7.91 7.91h-9.3c-4.35 0-7.91-3.56-7.91-7.91v-6.63a49.3 49.3 0 0 1-13.5-5.73l-4.79 4.79c-3.07 3.07-8.11 3.07-11.18 0l-6.58-6.58c-3.07-3.08-3.07-8.11 0-11.19l5.18-5.17a49.215 49.215 0 0 1-5.01-13.11h-7.74c-4.35 0-7.91-3.56-7.91-7.91v-9.3c0-4.22 3.36-7.7 7.53-7.9h26.48c-1.24 3.4-1.91 7.07-1.91 10.9 0 .56.01 1.11.04 1.65-.03.55-.04 1.1-.04 1.65 0 17.57 14.24 31.82 31.81 31.82s31.82-14.25 31.82-31.82c0-.55-.01-1.1-.05-1.65.04-.54.05-1.09.05-1.65 0-3.83-.68-7.5-1.92-10.9h26.83c4.18.2 7.53 3.68 7.53 7.9v4.65zm-90.26 137.36c2.24 1.97 2.47 5.39.51 7.63a5.412 5.412 0 0 1-7.63.51l-18.53-16.23c-2.24-1.97-2.47-5.39-.51-7.63l.53-.53 18.51-16.21c2.24-1.97 5.66-1.74 7.63.51 1.96 2.24 1.73 5.66-.51 7.63l-13.88 12.16 13.88 12.16zm44.45 8.14a5.412 5.412 0 0 1-7.63-.51c-1.96-2.24-1.73-5.66.51-7.63l13.88-12.16-13.88-12.16c-2.24-1.97-2.47-5.39-.51-7.63 1.97-2.25 5.39-2.48 7.63-.51l18.51 16.21.53.53c1.96 2.24 1.73 5.66-.52 7.63l-18.52 16.23zm72.04-188.25H73.49V256.7h363.94V37.28zM117.67 14.45c2.99 0 5.4 2.42 5.4 5.4 0 2.98-2.41 5.4-5.4 5.4-2.98 0-5.4-2.42-5.4-5.4 0-2.98 2.42-5.4 5.4-5.4zm-18.87 0c2.98 0 5.39 2.42 5.39 5.4 0 2.98-2.41 5.4-5.39 5.4-2.99 0-5.41-2.42-5.41-5.4 0-2.98 2.42-5.4 5.41-5.4zm-18.88 0c2.98 0 5.4 2.42 5.4 5.4 0 2.98-2.42 5.4-5.4 5.4-2.99 0-5.4-2.42-5.4-5.4 0-2.98 2.41-5.4 5.4-5.4zm161.35 259.51h29.46c2.76 0 5.02 2.26 5.02 5.02s-2.26 5.02-5.02 5.02h-29.46c-2.76 0-5.02-2.26-5.02-5.02s2.26-5.02 5.02-5.02z"/>
                         </svg>
                     </div>
@@ -126,7 +132,7 @@
                         <p class="col-11 py-3">    
                             Usar algunos softwares para crear servidores de prueba como UniserverZ, XAMPP y HeidiSQL.
                         </p>
-                        <svg style="scale: 0.85; width:45%;" viewBox="0 0 94 98" class="py-3 col-8 col-md-6">
+                        <svg style="scale: 0.85; width:45%;" viewBox="0 0 94 98" class="py-3 col-8 col-md-6 col-lg-3">
                             <path d="M73.2658 53.2392C84.7153 53.2392 93.9985 62.9636 93.9985 74.9574C93.9985 86.9512 84.7153 96.6756 73.2658 96.6756C61.8163 96.6756 52.5331 86.9512 52.5331 74.9574C52.5331 62.9636 61.8163 53.2392 73.2658 53.2392ZM61.3205 74.438H68.9713V87.079H77.5984V74.438H85.4705L73.4031 62.1406L61.3205 74.438ZM13.7604 22.2121C19.939 24.3775 28.5433 25.7119 38.1011 25.7119C47.6589 25.7119 56.2632 24.3775 62.4418 22.2121C67.8652 20.3183 71.2215 18.017 71.2215 15.7717C71.2215 13.5264 67.8652 11.2251 62.4418 9.33135C56.2632 7.17392 47.6589 5.83151 38.1011 5.83151C28.5433 5.83151 19.939 7.16593 13.7604 9.33135C2.24986 13.3586 1.92949 18.081 13.7604 22.2121ZM5.02642 39.1439C5.45359 41.2375 8.71071 43.347 13.7604 45.1129C19.939 47.2783 28.5433 48.6127 38.1011 48.6127C47.6589 48.6127 56.2632 47.2783 62.4418 45.1129C67.8652 43.2191 71.2215 40.9178 71.2215 38.6725H71.2444V23.2508C69.3145 24.6332 66.8355 25.8557 63.9292 26.8705C57.27 29.1958 48.1318 30.642 38.1011 30.642C28.0627 30.642 18.9321 29.2037 12.2729 26.8705C9.39722 25.8637 6.94866 24.6651 5.03405 23.2988V39.1439H5.02642ZM48.5513 74.8455C45.2332 75.1971 41.7243 75.3809 38.1011 75.3809C28.0627 75.3809 18.9321 73.9426 12.2729 71.6094C9.39722 70.6026 6.94866 69.404 5.03405 68.0376V82.8121C5.46122 84.9056 8.71834 87.0151 13.768 88.781C19.9466 90.9384 28.5509 92.2808 38.1087 92.2808C43.8449 92.2808 49.2302 91.8014 53.9595 90.9464C55.1495 92.4966 56.4996 93.9029 57.9947 95.1334C52.2509 96.4519 45.4163 97.211 38.1087 97.211C28.0704 97.211 18.9397 95.7727 12.2806 93.4394C8.77173 92.2089 0.327625 88.1817 0.327625 83.3554C0.327625 82.7881 0.327625 82.3167 0.327625 81.7733C0.312369 59.7834 0.266602 37.7776 0.266602 15.7717C0.266602 11.1692 4.85098 7.26181 12.2653 4.6649C18.9245 2.33966 28.0627 0.901367 38.1011 0.901367C48.1394 0.901367 57.27 2.33966 63.9292 4.67289C70.6799 7.03009 75.0812 10.482 75.8212 14.5571C75.9127 14.8128 75.9585 15.0925 75.9585 15.3882V49.2439C75.0431 49.1321 74.1125 49.0761 73.1666 49.0761C72.5183 49.0761 71.8851 49.1001 71.252 49.156V46.1676C69.3222 47.55 66.8431 48.7725 63.9369 49.7873C57.2777 52.1125 48.1394 53.5588 38.1087 53.5588C28.0704 53.5588 18.9397 52.1205 12.2806 49.7873C9.40485 48.7805 6.95629 47.5819 5.04168 46.2155V60.99C5.46884 63.0835 8.72596 65.193 13.7756 66.9589C19.9543 69.1163 28.5586 70.4587 38.1163 70.4587C41.9379 70.4587 45.607 70.243 49.0319 69.8515C48.7115 71.4576 48.5513 73.1356 48.5513 74.8455Z"/>
                         </svg>
                     </div>
@@ -144,7 +150,7 @@
                             Utilizar librerías de JavaScript como Jquery, JS Charts entre otras.
                         </p>
 
-                        <svg style="scale: 0.85;" viewBox="0 0 122.88 101.9" class="col-8 py-3 col-md-6">
+                        <svg style="scale: 0.85;" viewBox="0 0 122.88 101.9" class="col-8 py-3 col-md-6 col-lg-3">
                             <path d="M3.34,0h116.2a3.35,3.35,0,0,1,3.34,3.34v77a3.35,3.35,0,0,1-3.34,3.34H3.34A3.35,3.35,0,0,1,0,80.32v-77A3.35,3.35,0,0,1,3.34,0Zm46,62.5h.12l3.17-1.83a.22.22,0,0,0,.05-.08.08.08,0,0,0,0-.07l-3.47-6h0a.44.44,0,0,1-.06-.16.55.55,0,0,1,.43-.66l5.1-1.06h0a2.73,2.73,0,0,0,1.06-.44.65.65,0,0,0,.23-.29.25.25,0,0,0,0-.2,1.44,1.44,0,0,0-.45-.44L38.23,39.34l1.61,20.91a1.44,1.44,0,0,0,.15.61.26.26,0,0,0,.17.13.64.64,0,0,0,.36-.06,2.58,2.58,0,0,0,.91-.69l3.47-3.9h0a.53.53,0,0,1,.14-.12.57.57,0,0,1,.77.21l3.5,6a.09.09,0,0,0,.06,0Zm-30.77-39a1.29,1.29,0,0,0-1.29,1.42v2.69a1.29,1.29,0,0,0,2.2.92,1.26,1.26,0,0,0,.39-.92V26h1.29a1.29,1.29,0,1,0,0-2.58Zm1.29,9.28a1.29,1.29,0,0,0-2.2-.92,1.26,1.26,0,0,0-.39.92v2.59a1.29,1.29,0,0,0,2.2.92,1.26,1.26,0,0,0,.39-.92V32.74Zm0,7.76a1.3,1.3,0,0,0-2.2-.93,1.29,1.29,0,0,0-.39.93v2.58a1.3,1.3,0,0,0,2.2.93,1.29,1.29,0,0,0,.39-.93V40.5Zm0,7.75a1.3,1.3,0,0,0-2.2-.92,1.28,1.28,0,0,0-.39.92v2.59a1.3,1.3,0,1,0,2.59,0V48.25Zm0,7.76a1.29,1.29,0,0,0-2.2-.92,1.26,1.26,0,0,0-.39.92v2.36a1.3,1.3,0,0,0,1.3,1.35h.17a1.3,1.3,0,0,0,1.12-1.95V56Zm4.05,1.12a1.29,1.29,0,0,0-.92,2.2,1.26,1.26,0,0,0,.92.39h2.59a1.3,1.3,0,0,0,.92-2.2,1.26,1.26,0,0,0-.92-.39Zm7.76,0a1.3,1.3,0,0,0-.93,2.2,1.29,1.29,0,0,0,.93.39h2.58a1.66,1.66,0,0,0,.33,0l-.19-2.54H31.7ZM51,40.21a1.3,1.3,0,0,0,2.2.92,1.26,1.26,0,0,0,.39-.92V37.62a1.29,1.29,0,0,0-2.2-.92,1.26,1.26,0,0,0-.39.92v2.59Zm0-7.76a1.3,1.3,0,1,0,2.59,0V29.86a1.3,1.3,0,0,0-2.2-.92,1.28,1.28,0,0,0-.39.92v2.59ZM52.21,26a1.29,1.29,0,0,0,.92-2.19,1.26,1.26,0,0,0-.92-.39H49.62a1.29,1.29,0,0,0-.92,2.19,1.26,1.26,0,0,0,.92.39Zm-7.76,0a1.29,1.29,0,1,0,0-2.58H41.87a1.29,1.29,0,1,0,0,2.58ZM36.7,26a1.29,1.29,0,0,0,0-2.58H34.11a1.29,1.29,0,1,0,0,2.58Zm-7.76,0a1.29,1.29,0,0,0,.92-2.19,1.26,1.26,0,0,0-.92-.39H26.35a1.29,1.29,0,0,0-.92,2.19,1.26,1.26,0,0,0,.92.39ZM83,73.79c-.1-19.54-1.46-43.19,0-62.14H4.38V70.84a3,3,0,0,0,3,3Zm8.26-52.13a1.51,1.51,0,1,1,0-3h20.36a1.51,1.51,0,1,1,0,3Zm1.95,38.18h16.46A4.13,4.13,0,0,1,113.79,64h0a4.14,4.14,0,0,1-4.12,4.13H93.21A4.14,4.14,0,0,1,89.09,64h0a4.13,4.13,0,0,1,4.12-4.12Zm-2-6.91a1.51,1.51,0,0,1,0-3h20.48a1.51,1.51,0,0,1,0,3Zm.37-10.42a1.51,1.51,0,1,1,0-3h19.74a1.51,1.51,0,0,1,0,3Zm-.39-10.42a1.51,1.51,0,1,1,0-3H111.7a1.51,1.51,0,0,1,0,3Zm26.11,41.13V12.37H85.59V73.79h30a2.87,2.87,0,0,0,1.73-.57Zm-71,15h30.3c.08,5.24,2.24,9.94,8.09,13.63H38.2c4.71-3.41,8.11-7.54,8.09-13.63ZM113.8,4.92a2,2,0,1,1-2,2,2,2,0,0,1,2-2Zm-13.44,0a2,2,0,1,1-2,2,2,2,0,0,1,2-2Zm6.72,0a2,2,0,1,1-2,2,2,2,0,0,1,2-2Z"/>
                         </svg>
                     </div>
@@ -243,24 +249,24 @@
             'title': 'JS',
             'img': 'public/img/icons/js.svg',
             'level': 5,
-            'text': 'Desarrollar interacciones dinámicas en páginas web, incluyendo eventos concretos, AJAX y para mejorar el diseño responive.'
+            'text': 'Desarrollar interacciones dinámicas en páginas web, incluyendo eventos concretos, peticiones en segundo plano con AJAX y  adaptaciones en el cliente para lograr un mejor diseño responsive.'
         },
         'JAVA' : {
             'title': 'JAVA',
             'img': 'public/img/icons/java.svg',
             'level': 4,
-            'text': 'Desarrollo de webs con cantenido dinámico mediante el flujo de modelo-vista-controlador, utilizando Servlets, filters, y JSPs (Java Server Pages). Realizar la comunicación la la base de datos con consultas SQL confeccionadas a mano.'
+            'text': 'Desarrollo de webs con contenido dinámico mediante el flujo de modelo-vista-controlador, utilizando servlets, filters, y JSPs (Java Server Pages). Realizar la comunicación la la base de datos con consultas SQL confeccionadas a mano.'
         },
         'PHP' : {
             'title': 'PHP',
             'img': 'public/img/icons/php.svg',
             'level': 5,
-            'text': 'Desarrollo de la webs dinámicas mediante el flujo de modelo-vista-controlador, de manera rudimentaria, y también utilizando el framework de Laravel. Manejar la comunicación con la base de datos mediante migraciones y seeders de Eloquent. Crear vistas y secciones administrativas de la aplicación(panel admin).'
+            'text': 'Desarrollo de webs dinámicas mediante el flujo de modelo-vista-controlador, de manera rudimentaria, y también utilizando el framework de Laravel. Manejar la comunicación con la base de datos mediante migraciones y seeders de Eloquent. Crear vistas y secciones administrativas de la aplicación(panel admin).'
         },
         'SQL': {
             'title': 'SQL',
             'img': 'public/img/icons/sql.svg',
-            'level': 3.5,
+            'level': 3,
             'text': 'Manipular la base de datos mediante consultas SQL, realizando inserts, updates, deletes, y selects para obtener la información deseada. También sé utilizar joins y claves externas para lograr un esquema de datos complejos.'
         }
     }
