--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <body>
     <header class="fixed-top">
         <div id="responsive_header" class="d-flex flex-row justify-content-between px-3 py-2">
-            <aside>
+            <aside class="row">
                 <a href="index.html" id="nombre" class="d-flex flex-row align-items-center justify-content-start app_hover">
                     <div id="logo" class="halo d-flex align-items-center justify-content-center">
                         <svg class="app_svg app_hover" viewBox="0 0 485.688 485.688">
@@ -53,6 +53,12 @@
             <button id="responsive_menu_button" class="flex_center app_hover">
                 <i data_icon_name="burger_menu"></i>
             </button>
+            
+            <nav id="desktop_nav" class="flex-row">
+                <a href="estudios.html"><h3 class="app_hover text-center regular px-4 py-2">Estudios</h3></a>
+                <a href="habilidades.html"><h3 class="app_hover text-center regular px-4 py-2">Habilidades</h3></a>
+                <a href="#"><h3 class="app_hover text-center regular px-4 py-2">Sobre mí</h3></a>
+            </nav>
         </div>
 
         <nav id="responsive_nav" class="d-flex flex-column">
@@ -73,7 +79,7 @@
                 </div>
                 <div class="my-5 col-8">
                     <div class="hexagon_clip bg_main row ">
-                        <div class="hexagon_clip profile_window "></div>
+                        <div class="hexagon_clip profile_window"></div>
                     </div>
                 </div>
                 <h4 class="sub_title px-5 text-center col-12">Desarrollador de aplicaciones web</h4>
@@ -83,7 +89,7 @@
                 <div class="text-center col-10 col-lg-12">
                     <h4 class="code_reveal_effect light py-5">Mi portfolio</h4>
                     <p>
-                        Hola, en este portfolio puedes encontrar un repositorio de mis proyectos, reflexiones y trabajos luego de cursar DAW en el Centro San Luis. Así como algo de información personal, currículum y habilidades en general.
+                        En este portfolio encontrarás un repositorio de mis proyectos, reflexiones y trabajos luego de cursar DAW en el Centro San Luis. Así como algo de información personal, currículum y habilidades en general.
                     </p>
                     <div class="row col-12 justify-content-center align-items-center py-5">
                         <a href="habilidades.html" class="app_color_button text-nowrap col-10 col-lg-8">Ver CV</a>
