sobre mi y tetris

--- a/habilidades.html
+++ b/habilidades.html
@@ -57,14 +57,14 @@
             <nav id="desktop_nav" class="flex-row">
                 <a href="estudios.html"><h3 class="app_hover text-center regular px-4 py-2">Estudios</h3></a>
                 <a href="habilidades.html"><h3 class="section_selected app_hover text-center regular px-4 py-2">Habilidades</h3></a>
-                <a href="#"><h3 class="app_hover text-center regular px-4 py-2">Sobre mí</h3></a>
+                <a href="sobre_mi.html"><h3 class="app_hover text-center regular px-4 py-2">Sobre mí</h3></a>
             </nav>
         </div>
 
         <nav id="responsive_nav" class="d-flex flex-column">
             <a href="estudios.html"><h3 class="text-left regular px-4 py-2">Estudios</h3></a>
             <a href="habilidades.html"><h3 class="section_selected text-left regular px-4 py-2">Habilidades</h3></a>
-            <a href="#"><h3 class="text-left regular px-4 py-2">Sobre mí</h3></a>
+            <a href="sobre_mi.html"><h3 class="text-left regular px-4 py-2">Sobre mí</h3></a>
         </nav>
     </header>
 
@@ -75,9 +75,7 @@
         </section>
         
         <section class="row justify-content-center bg_black">
-            <p class="col-10 my-4 text-center">
-                Selecciona una habilidad
-            </p>
+            <p class="col-10 my-4 text-center">Selecciona una habilidad</p>
             <div class="col-11 col-md-8 col-lg-6 row mb-5">
                 <article class="light_border">
                     <button class="accordion medium">
@@ -169,9 +167,9 @@
             <p class="col-10 my-4 text-center">Selecciona un lenguaje</p>
 
             <div class="row flex-sm-column flex-md-row col-12 col-md-8 justify-content-center align-content-center pb-5" id="lenguajes_container">
-                <div class="row col-12 col-md-4 justify-content-center gap-4 pb-sm-5" id="lenguajes_buttons"></div>  
+                <div class="row col-12 col-md-4 col-lg-3 justify-content-center gap-4 pb-sm-5" id="lenguajes_buttons"></div>  
                 <div class="row col-12 col-md-8 justify-content-center align-content-start gap-4" id="lenguajes_content">
-                    <h4 class="code_reveal_effect col-12 text-center bold " id="lenguaje_title"></h4>
+                    <h4 class="code_reveal_effect col-12 text-center bold" id="lenguaje_title"></h4>
                     <div class="divider_gray"></div>
                     <p class="col-10 col-md-12" id="lenguaje_text"></p>
                 </div> 
@@ -193,7 +191,7 @@
         <div class="flex-column flex_center gap-3 pb-5">
             <a href="estudios.html"><h3 class="extralight text_hover">Estudios</h3></a>
             <a href="habilidades.html"><h3 class="extralight text_hover">Habilidades</h3></a>
-            <a href="#"><h3 class="extralight text_hover">Sobre mí</h3></a>
+            <a href="sobre_mi.html"><h3 class="extralight text_hover">Sobre mí</h3></a>
         </div>
         
         <h2 class="bold pb-3">Contacto</h2>
