--- a/index.html
+++ b/index.html
@@ -57,14 +57,14 @@
             <nav id="desktop_nav" class="flex-row">
                 <a href="estudios.html"><h3 class="app_hover text-center regular px-4 py-2">Estudios</h3></a>
                 <a href="habilidades.html"><h3 class="app_hover text-center regular px-4 py-2">Habilidades</h3></a>
-                <a href="#"><h3 class="app_hover text-center regular px-4 py-2">Sobre mí</h3></a>
+                <a href="sobre_mi.html"><h3 class="app_hover text-center regular px-4 py-2">Sobre mí</h3></a>
             </nav>
         </div>
 
         <nav id="responsive_nav" class="d-flex flex-column">
             <a href="estudios.html"><h3 class="text-left regular px-4 py-2">Estudios</h3></a>
             <a href="habilidades.html"><h3 class="text-left regular px-4 py-2">Habilidades</h3></a>
-            <a href="#"><h3 class="text-left regular px-4 py-2">Sobre mí</h3></a>
+            <a href="sobre_mi.html"><h3 class="text-left regular px-4 py-2">Sobre mí</h3></a>
         </nav>
     </header>
 
@@ -92,7 +92,7 @@
                         En este portfolio encontrarás un repositorio de mis proyectos, reflexiones y trabajos luego de cursar DAW en el Centro San Luis. Así como algo de información personal, currículum y habilidades en general.
                     </p>
                     <div class="row col-12 justify-content-center align-items-center py-5">
-                        <a href="habilidades.html" class="app_color_button text-nowrap col-10 col-lg-8">Ver CV</a>
+                        <a href="public/docs/RIVO_CV_2023.pdf" class="app_color_button text-nowrap col-10 col-md-8 col-lg-4">Ver CV</a>
                     </div>
                 </div>
             </article>
@@ -160,11 +160,11 @@
 
         <section class="row py-5 gap-3 justify-content-center align-items-center">
             <h2 class="text-center p-1 pt-3">Competencias transversales</h2>
-            <p class="p-5">
+            <p class="p-5 text-center col-12 col-lg-10">
                 Estas son algunas de las competencias transversales que se darrollan con el modelo de aprendizaje Ethazi:
             </p>
 
-            <div class="carta_index bg_gray_dark col-12 col-lg-3">
+            <div class="carta_index bg_gray_dark col-12 col-lg-3 col-xl-2 mt-3">
                 <div>
                     <img src="public/img/index/organizar.jpg" alt="Organización del trabajo">
                 </div>
@@ -179,7 +179,7 @@
                 </div>
             </div>
 
-            <div class="carta_index bg_gray_dark col-12 col-lg-3">
+            <div class="carta_index bg_gray_dark col-12 col-lg-3 col-xl-2 mt-3">
                 <div>
                     <img src="public/img/index/equipo.jpg" alt="Organización del trabajo">
                 </div>
@@ -194,7 +194,7 @@
                 </div>
             </div>
 
-            <div class="carta_index bg_gray_dark col-12 col-lg-3">
+            <div class="carta_index bg_gray_dark col-12 col-lg-3 col-xl-2 mt-3">
                 <div>
                     <img src="public/img/index/reflex.jpg" alt="Organización del trabajo">
                 </div>
@@ -227,7 +227,7 @@
         <div class="flex-column flex_center gap-3 pb-5">
             <a href="estudios.html"><h3 class="extralight text_hover">Estudios</h3></a>
             <a href="habilidades.html"><h3 class="extralight text_hover">Habilidades</h3></a>
-            <a href="#"><h3 class="extralight text_hover">Sobre mí</h3></a>
+            <a href="sobre_mi.html"><h3 class="extralight text_hover">Sobre mí</h3></a>
         </div>
         
         <h2 class="bold pb-3">Contacto</h2>
