--- a/estudios.html
+++ b/estudios.html
@@ -57,14 +57,14 @@
             <nav id="desktop_nav" class="flex-row">
                 <a href="estudios.html"><h3 class="section_selected app_hover text-center regular px-4 py-2">Estudios</h3></a>
                 <a href="habilidades.html"><h3 class="app_hover text-center regular px-4 py-2">Habilidades</h3></a>
-                <a href="#"><h3 class="app_hover text-center regular px-4 py-2">Sobre mí</h3></a>
+                <a href="sobre_mi.html"><h3 class="app_hover text-center regular px-4 py-2">Sobre mí</h3></a>
             </nav>
         </div>
 
         <nav id="responsive_nav" class="d-flex flex-column">
             <a href="estudios.html"><h3 class="section_selected text-left regular px-4 py-2">Estudios</h3></a>
             <a href="habilidades.html"><h3 class="text-left regular px-4 py-2">Habilidades</h3></a>
-            <a href="#"><h3 class="text-left regular px-4 py-2">Sobre mí</h3></a>
+            <a href="sobre_mi.html"><h3 class="text-left regular px-4 py-2">Sobre mí</h3></a>
         </nav>
     </header>
 
@@ -119,7 +119,7 @@
             <div class="divider"></div>
         </section>
         
-        <section class="row justify-content-center bg_gray_dark px-5 flex_center">
+        <section class="row justify-content-center bg_gray_dark px-5 flex_center col-12">
             <h2 class="text-center py-5 col-12">Análisis</h2>
             <p class="py-3 col-12 col-lg-8">
                 Realizar el análisis funcional de la aplicación, que incluye:
@@ -154,7 +154,7 @@
             <div class="divider"></div>
         </section>
 
-        <section class="row justify-content-center bg_gray_dark px-5">
+        <section class="row justify-content-center bg_gray_dark px-5 col-12">
             <h2 class="text-center py-5 col-12">Back-end</h2>
             <p class="py-3 px-2 col-12 col-lg-8">
                 Introducción a la programación orientada a objetos con Java. Desarrollo de la web del lado del servidor, manipulación de base de datos SQL.
@@ -189,7 +189,7 @@
         <div class="flex-column flex_center gap-3 pb-5">
             <a href="estudios.html"><h3 class="extralight text_hover">Estudios</h3></a>
             <a href="habilidades.html"><h3 class="extralight text_hover">Habilidades</h3></a>
-            <a href="#"><h3 class="extralight text_hover">Sobre mí</h3></a>
+            <a href="sobre_mi.html"><h3 class="extralight text_hover">Sobre mí</h3></a>
         </div>
         
         <h2 class="bold pb-3">Contacto</h2>
