--- a/habilidades.html
+++ b/habilidades.html
@@ -301,9 +301,9 @@
             }
         };
 
-
-
         let span = document.createElement('span');
+        span.style.display = "flex";
+        span.style.justifyContent = "center";
         span.textContent = key;
 
         box.appendChild(span);
